--- a/js_webpack/package.json
+++ b/js_webpack/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode=production",
+    "build:watch": "webpack --watch",
+    "build": "webpack",
     "start": "webpack-dev-server"
   },
   "keywords": [],
@@ -22,7 +23,9 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "leaflet": "^1.6.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-leaflet": "^2.6.1"
   }
 }
